[package]
name = "libunicorn"
version = "0.0.1"
authors = ["The Muktakosh Project Developers"]
readme = "README.md"
repository = "https://github.com/muktakosh/unicorn"
homepage = "https://muktakosh.org/c/unicorn"
license = "Unlicense"
description = """
unicorn's purpose is to dissolve fragmentation of the internet; by
making it possible to bridge together different types of networks. It
aims to be a data-agnostic communications technology platform that can
connect any number and combination of clients (humans or machines).
"""
build = "build.rs"

[dependencies]
clap = "2.10"
log = "0.3"
ws = "0.5"
jsonrpc-core = "3.0"
serde = "0.8"
serde_json = "0.8"

serde_derive = { version = "0.8", optional = true }
#serde_macros = { version = "0.8", optional = true }

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[features]
default = ["serde_codegen"]
nightly = ["serde_derive"]

[lib]
name = "unicorn"
path = "src/lib.rs"

[[bin]]
name = "unicorn"
doc = false
path = "src/unicorn.rs"

[profile.release]
lto = true
